# rpi_project

./: .gitignore  Makefile  camera_stream.cpp  camera_stream.h  main.cpp  motion_stream  stream_test.cpp
no_gui/: motion_detector.cpp  motion_detector.h
prediction_api/build-prediction_api-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  motion_cam_gui
prediction_api/build-prediction_api-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-1f756efc5b3e2dbd97bb.json  cmakeFiles-v1-22d3a065330add2b2678.json  codemodel-v2-07e936b26d0086c38ac8.json  codemodel-v2-edded3111516c1ac3967.json  directory-.-Debug-03079c7ff740129d675a.json  index-2025-04-28T08-18-45-0084.json  index-2025-04-28T08-20-50-0931.json  target-prediction_api-Debug-7cf2d8feb8a265c60aca.json  target-prediction_api_autogen-Debug-469028d7baeebc0a7f73.json  (+1 more)
prediction_api/build-prediction_api-Desktop-Debug/motion_cam_gui_autogen/: deps  moc_predefs.h
prediction_api/build-prediction_api-Desktop-Debug/motion_cam_gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp
prediction_api/prediction_api/: CMakeLists.txt  camera_stream.cpp  camera_stream.h  main.cpp  mainwindow.cpp  mainwindow.cpp.vsrTue  mainwindow.h  motion_detector.cpp
qt_gui/build-motion_cam_gui-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  motion_cam_gui
qt_gui/build-motion_cam_gui-Desktop-Debug/motion_cam_gui_autogen/: deps
qt_gui/build-motion_cam_gui-Desktop-Debug/motion_cam_gui_autogen/EWIEGA46WW/: moc_mainwindow.cpp
qt_gui/motion_cam_gui/: camera_stream.cpp  camera_stream.h  main.cpp  mainwindow.cpp  mainwindow.h
(+31 files in other folders)
